# archidraw

./: .eslintignore  .gitignore  README.md
.github/: copilot-instructions.md
.github/agents/: copilot-instructions.md
.github/workflows/: frontend.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: pyproject.toml
backend/app/: README.md
frontend/: .npmignore  .prettierignore  README.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/e2e/: canvas-mobile.spec.ts  canvas-ready.spec.ts  canvas-resize.spec.ts  canvas-telemetry.spec.ts  overlay-blocking.spec.ts
frontend/src/lib/: index.ts
frontend/src/routes/: +layout.svelte  +page.svelte  +page.ts  page.svelte.spec.ts
frontend/tests/canvas/: fabricStage.spec.ts
frontend/tests/components/: CanvasStatus.spec.ts  CanvasStatusHarness.svelte
frontend/tests/instrumentation/: telemetry.spec.ts
frontend/tests/mocks/: FabricStageStub.svelte
frontend/tests/setup/: stores.spec.ts  test-setup.ts
frontend/tests/stores/: workspaceLayoutStore.spec.ts
specs/001-core-spa-layout/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-core-spa-layout/checklists/: requirements.md
specs/001-core-spa-layout/contracts/: fabric-canvas-state.openapi.yaml
specs/001-drawing-data-model/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-drawing-data-model/checklists/: requirements.md
(+9 files in other folders)
