[project]
name = "app"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.121.2",
]

[dependency-groups]
dev = [
    "behave>=1.3.3",
    "pytest>=9.0.1",
    "ruff>=0.14.5",
]

[tool.pytest.ini_options]
pythonpath = ["app"]
testpaths = ["tests"]

[tool.behave]
paths = ["tests/behave"]
stdout_capture = false
stderr_capture = false

[tool.ruff]
src = ["app"]